--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "https://github.com/Sam-Devs/Node-SMS-APP.git",
   "author": "Sam Ayorinde <41350405+Sam-Devs@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "africastalking": "^0.5.4",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.12"
+  }
 }
